--- a/getdinerotoday/templates/landingpages/about-us.html
+++ b/getdinerotoday/templates/landingpages/about-us.html
@@ -73,8 +73,6 @@
           <h2 class="title">Who are we?</h2>
           {% if dynamic %}
           <p>{{dynamic.title}} offers a wide range of products which includes our business builder program, business funding program, and 0% business credit card program. Our business builder program helps you with each step of the business credit building process. Our business funding program helps you get all the funding you can qualify for, we do not charge a fee to help you acquire funding. Our 0% business credit card program helps you obtain 0% business credit cards for up to 18 months. Sign up for the program that best fits your business needs.</p>
-          {% else %}
-          <p>Get Dinero Today offers a wide range of products which includes our business builder program, business funding program, and 0% business credit card program. Our business builder program helps you with each step of the business credit building process. Our business funding program helps you get all the funding you can qualify for, we do not charge a fee to help you acquire funding. Our 0% business credit card program helps you obtain 0% business credit cards for up to 18 months. Sign up for the program that best fits your business needs.</p>
           {% endif %}
           <a href="/pricing" class="btn btn-theme btn-circle" target="_blank" style="margin-top: 10px;">Check Our Packages</a>
         </div>
@@ -154,7 +152,7 @@
                             <br>
                             <div class="col-md-12 mt-2">
                               
-                              {% if dynamic %}
+                              {% if dynamic.sub_name != "" %}
                               <a href="https://www.{{dynamic.sub_name}}.getdinerotoday.com/user/login/" target="_blank" class="btn btn-theme btn-circle">Sign Up For Forever Free
                                   Package</a>
                               {% else %}
