--- a/getdinerotoday/templates/landingpages/pricing.html
+++ b/getdinerotoday/templates/landingpages/pricing.html
@@ -84,7 +84,7 @@
                             </ul>
                             <br>
                             <div class="col-md-12 mt-2">
-                              {% if dynamic %}
+                              {% if dynamic.sub_name != "" %}
                               <a href="https://www.{{dynamic.sub_name}}.getdinerotoday.com/user/login/" target="_blank" class="btn btn-theme btn-circle">Sign Up For Forever Free
                                   Package</a>
                               {% else %}
