--- a/getdinerotoday/templates/landingpages/services.html
+++ b/getdinerotoday/templates/landingpages/services.html
@@ -87,11 +87,7 @@
                                         class="text-theme">Built </span>For Businesses Like Yours. See All The
                                     Features
                                     We Do For You Below.</h3>
-                                {% else %}
-                                <h3 class="text-black font-weight-normal line-h-2">Get Dinero Today Is <span
-                                    class="text-theme">Built </span>For Businesses Like Yours. See All The
-                                Features
-                                We Do For You Below.</h3>
+                               
                                 {% endif %}
                             </div>
                         </div>
@@ -821,15 +817,15 @@
                                             </ul>
                                             <br>
                                             <div class="col-md-12 mt-2">
-                                                
-                                                    {% if dynamic %}
+                                             
+                                                    {% if dynamic.sub_name != "" %}
                                                     <a href="https://www.{{dynamic.sub_name}}.getdinerotoday.com/user/login/" target="_blank" class="btn btn-theme btn-circle">Sign Up For Forever Free
                                                         Package</a>
                                                     {% else %}
                                                     <a href="https://www.getdinerotoday.com/user/login/" target="_blank" class="btn btn-theme btn-circle">Sign Up For Forever Free
                                                         Package</a>
                                                     {% endif %}
-                                                
+                                               
                                             </div>
                                         </div>
                                     </div>
