--- a/getdinerotoday/templates/landingpages/components/Footer.html
+++ b/getdinerotoday/templates/landingpages/components/Footer.html
@@ -43,23 +43,23 @@
   <div class="primary-footer">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-lg-6 col-md-6 md-m2-5">
+        <div class="col-lg-6 col-md-6 col-sm-12 md-m2-5">
           {% if dynamic %}                    
                     <h3 class="mb-2 wow fadeInUp" data-wow-duration="1.5s"                        
                         style="visibility: visible; animation-duration: 1.5s; animation-name: fadeInUp;">{{dynamic.title}}</h3>
           {% endif %}
           
-            <p class=" mb-1 wow fadeInUp font-small pr-2" data-wow-duration="2s" data-wow-delay="0.3s"
+            <p class=" mb-1 wow fadeInUp font-small pr-lg-2" data-wow-duration="2s" data-wow-delay="0.3s"
                        style="visibility: visible; animation-duration: 2s; animation-delay: 0.3s; animation-name: fadeInUp;">
                         We Help Businesses Acquire Business Credit With Our Free Software, Mobile App, & Google Chrome Extension. Also,
                       We Have A Free Personal Credit, Marketing, & Business Credit Course In Our Software As Well.  </p>
           
         </div>
-        <div class="col-lg-6 col-md-6 md-m2-5">
+        <div class="col-lg-6 col-md-6 col-sm-12 md-m2-5">
           <h4 class="wow fadeInUp" data-wow-duration="1.5s"                        
           style="visibility: visible; animation-duration: 1.5s; animation-name: fadeInUp;">Contact Us</h4>
          {% if dynamic %}
-          <ul class="media-icon list-unstyled mb-1 wow fadeInUp font-small pr-2" data-wow-duration="2s" data-wow-delay="0.3s"
+          <ul class="media-icon list-unstyled mb-1 wow fadeInUp font-small pr-md-2" data-wow-duration="2s" data-wow-delay="0.3s"
           style="visibility: visible; animation-duration: 2s; animation-delay: 0.3s; animation-name: fadeInUp;">
             <li>
               
@@ -76,17 +76,33 @@
       </div>
     </div>
   </div> 
+  <!-- <div class="secondary-footer mb-2 ">
+    <div class="container-fluid">
+      <div class="copyright text-center">
+        <div class="row align-items-center" style="
+        color: rgb(41, 21, 21);
+    ">
+          {% if dynamic %}
+          <div class="col-lg-12 col-md-12"> <span>&copy; {{dynamic.title}} 2020 | All Rights Reserved</span>
+          {% else %}
+            <div class="col-lg-12 col-md-12"> <span>&copy; Get Dinero Today 2020 | All Rights Reserved</span>
+          {% endif %}
+          </div>
+        </div>
+      </div>
+    </div>
+  </div> -->
 </footer>
-<div class="secondary-footer bg-dark ">
+<div class="secondary-footer bg-dark">
   <div class="container-fluid">
     <div class="copyright text-center">
-      <div class="row align-items-center" style="
+      <div class="row align-items-center pa-3" style="
       color: white;
   ">
         {% if dynamic %}
-        <div class="col-lg-12 col-md-12"> <span>&copy; {{dynamic.title}} 2020 | All Rights Reserved</span>
+        <div class="col-lg-12 col-md-12 col-sm-12"> <span>&copy; {{dynamic.title}} 2020 | All Rights Reserved</span>
         {% else %}
-          <div class="col-lg-12 col-md-12"> <span>&copy; Get Dinero Today 2020 | All Rights Reserved</span>
+          <div class="col-lg-12 col-md-12 col-sm-12"> <span>&copy; Get Dinero Today 2020 | All Rights Reserved</span>
         {% endif %}
         </div>
       </div>
