--- a/user/templates/userBase.html
+++ b/user/templates/userBase.html
@@ -14,7 +14,8 @@
         }
 
         .bgcolor {
-            background-image: {{ LOGIN_BG_COLOR_CSS }};
+            background-color: {{ LOGIN_BG_COLOR_CSS }};
+            background: {{ LOGIN_BG_COLOR_CSS }};
             background-repeat: no-repeat;
             font-family: "Montserrat", sans-serif;
             color: #575962;
