--- a/getdinerotoday/static/css/style.css
+++ b/getdinerotoday/static/css/style.css
@@ -39,6 +39,10 @@
 
 body {font-family: 'Heebo', sans-serif; font-weight: normal; font-style: normal; font-size: 15px; line-height: 1.5; color:#5f5f5f; letter-spacing: 1px;}
 
+@media only screen and (max-width: 480px) {
+    body {font-family: 'Heebo', sans-serif; font-weight: normal; font-style: normal; font-size: 15px; line-height: 1.5; color:#5f5f5f;}
+
+  }
 
 /* ------------------------
     Typography
