--- a/getdinerotoday/templates/landingpages/components/Header.html
+++ b/getdinerotoday/templates/landingpages/components/Header.html
@@ -65,7 +65,7 @@
                             <img id="logo-img" class="img-center sticky-logo" src="{{ wl_logo }}"
                                  height="180px" alt="">
                         </a>
-                        <button class="navbar-toggler" type="button" data-toggle="collapse"
+                        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse"
                                 data-target="#navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                             <span></span>
                             <span></span>
@@ -105,9 +105,14 @@
                                 </li> -->
                                 <!-- <li><a class="nav-link" href="https://getdinerotodayaffiliateprogram.tapfiliate.com/" target="_blank">Affiliate Program</a>
                                 </li> -->
+                                {% if dynamic.sub_name == "" %}
+                                <li class="nav-item"><a class="nav-link" href="/whitelabel">White Label Program</a>
+                                </li>
+                                {% endif %}
                                 <li class="nav-item"><a class="nav-link" href="/contact">Contact Us</a>
                                 </li>
                                 <div class="client-loginshow">
+                                    
                                     <li class="nav-item"><a class="nav-link" href="/dashboard" target="_blank">Client
                                         Login</a>
                                     </li>
@@ -123,7 +128,7 @@
                             </ul>
                         </div>
                         <a class="btn btn-white btn-sm" href="/dashboard" target="_blank"
-                           data-text="Client Login"> <span>Client<span></span> <span></span><span></span>  <span></span><span></span> <span></span> <span>Login</span><span></span><span></span><span></span><span></span></span>
+                           data-text="Client Login"  <span>Client<span></span> <span></span><span></span>  <span></span><span></span> <span></span> <span>Login</span><span></span><span></span><span></span><span></span></span>
                         </a>
                     </nav>
                 </div>
