--- a/getdinerotoday/templates/landingpages/index.html
+++ b/getdinerotoday/templates/landingpages/index.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<section class="fullscreen-banner banner p-0" data-bg-img="/static/images/pattern/01.png"
+<section class="fullscreen-banner banner" data-bg-img="/static/images/pattern/01.png"
          style="height: 1131px; background-image: url('/static/images/pattern/01.png');">
     <div class="hero-bg">
         <img class="img-fluid" src="/static/images/bg/04.png" alt="">
@@ -129,8 +129,10 @@ display: none;
                         </div>
                         <h4>Download Our Free Iphone & Android App</h4>
                         {% if dynamic %}
-                        <a href={{dynamic.iphoneApp}} target="_blank" class="btn btn-theme btn-circle">Click Here To Download On Iphone Store</a> <br> <br>
-                       {% endif %}
+                        <a href={{iphoneApp}} target="_blank" class="btn btn-theme btn-circle">Click Here To Download On Iphone Store</a> <br> <br>
+                        <a href={{androidApp}} target="_blank" class="btn btn-theme btn-circle">Click Here To Download On Google Play Store</a> <br> <br>
+                        </div>
+                        {% endif %}
                         </div>
                 </div>
             </div>
@@ -327,7 +329,9 @@ display: none;
                 <div class="bar bar-left"></div>
               </div>
               <h2 class="title">Why Buy From Us?</h2>
-            <iframe width="100%" height="515" src="https://www.youtube.com/embed/uS7BjJ83ZIQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              {% if dynamic %}
+                <iframe width="100%" height="515" src="{{why_buy_link}}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              {% endif %}
             </div>
           </div>
         </div>
