--- a/getdinerotoday/templates/landingpages/whitelabel.html
+++ b/getdinerotoday/templates/landingpages/whitelabel.html
@@ -42,9 +42,10 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-6 col-md-12">
-                        <div class="video-btn video-btn-pos"><a class="play-btn popup-youtube"
-                                                                href="https://www.youtube.com/watch?v=r2lE8og5rA0"><i
-                                class="la la-play"></i></a>
+                        <div class="video-btn video-btn-pos">
+                            <a class="play-btn popup-youtube" href="https://www.youtube.com/watch?v=87lWRIttCv0"><i
+                                class="la la-play"></i>
+                            </a>
                             <div class="spinner-eff">
                                 <div class="spinner-circle circle-1"></div>
                                 <div class="spinner-circle circle-2"></div>
