--- a/business/templates/businessCreditBuilding/BusinessCreditStepsOnlyPrograms.html
+++ b/business/templates/businessCreditBuilding/BusinessCreditStepsOnlyPrograms.html
@@ -185,7 +185,7 @@
                                         </div>
                                         <div class="text-center">
                                             <input type="hidden" value="" name="business_builder_program"
-                                                   id="business_builder_program" form="business-programm">
+                                                   id="business_builder_program">
                                             <button class="btn btn-primary" name="business_builder_program" value="on" form="business-programm">
                                                 Get Business
                                                 Builder Monthly Program
@@ -332,7 +332,7 @@
                                         </div>
                                         <div class="text-center ">
                                             <input type="hidden" value="" name="business_builder_program_year"
-                                                   id="business_builder_program_year"  form="business_builder_program_year_form">
+                                                   id="business_builder_program_year">
                                             <button class="btn btn-primary" name="business_builder_program_year"  form="business_builder_program_year_form"
                                                     value="on">
                                                 Get Business Builder Annual Program
