--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -46,6 +46,10 @@
                         {#                        with No Money Down</a>#}
                         {#                </li>#}
                         <li class="nav-item">
+                            <a href="{% url 'business:nocredit-financings' %}" 
+                               class="nav-link"> Add Business Tradelines </a>
+                        </li>
+                        <li class="nav-item">
                             <a href="https://www.youtube.com/watch?v=xNCfnbGT5hY&feature=youtu.be" target="_blank"
                                class="nav-link"> Watch Webinar On Building Business Credit </a>
                         </li>
