--- a/getdinerotoday/templates/landingpages/index.html
+++ b/getdinerotoday/templates/landingpages/index.html
@@ -117,7 +117,9 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-6 col-md-12 my-btn-in-desktopd">
-                        <img class="img-fluid w-250" src="/static/images/iphonescreenshot.png" height="400px" alt="">
+                        {% if dynamic.appImage %}
+                        <img class="img-fluid w-250" src="{{ dynamic.appImage }}" height="400px" alt="">
+                        {% endif %}
                     </div>
                     <!--  <div class="col-lg-6 col-md-12 my-ifram-in-mobile">-->
                     <!--    <div class="video-responsive my-ifram-in-mobile">-->
@@ -336,8 +338,8 @@
                             <div class="bar bar-left"></div>
                         </div>
                         <h2 class="title">Why Buy From Us?</h2>
-                        {% if dynamic.why_buy_link %}
-                            <iframe width="100%" height="515" src="{{ why_buy_link }}" frameborder="0"
+                        {% if dynamic %}
+                            <iframe width="100%" height="515" src="{{ dynamic.why_buy_link }}" frameborder="0"
                                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                     allowfullscreen></iframe>
                         {% endif %}
