--- a/business/templates/financingProducts/noCreditCheckFinancing.html
+++ b/business/templates/financingProducts/noCreditCheckFinancing.html
@@ -7,6 +7,8 @@
 <!--            Content Start             -->
 <!-- ============================================================== -->
 {% block content %}
+    <div class="row page-header">
+    </div>
 
     <section class="main-content">
       <!--  <div class="row">
