--- a/getdinerotoday/templates/landingpages/index.html
+++ b/getdinerotoday/templates/landingpages/index.html
@@ -116,9 +116,9 @@
         <section class="pt-0">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-6 col-md-12 my-btn-in-desktopd">
+                    <div class="col-lg-6 col-md-12 my-btn-in-desktopd text-center">
                         {% if dynamic.appImage %}
-                        <img class="img-fluid w-250" src="{{ dynamic.appImage }}" height="400px" alt="">
+                        <img class="img-fluid w-250" src="{{ dynamic.appImage }}" style="height: 400px" alt="">
                         {% endif %}
                     </div>
                     <!--  <div class="col-lg-6 col-md-12 my-ifram-in-mobile">-->
