--- a/whitelabelpartnerportal/templates/paidsignup.html
+++ b/whitelabelpartnerportal/templates/paidsignup.html
@@ -19,7 +19,7 @@
 {% block content %}
     <div class="row page-header">
         <div class="col-lg-6 align-self-center ">
-            <h2>Your Clients Who Have Signed Up For Paid Business Credit Builder Program</h2></div>
+            <h2>Your Clients Who Have Signed Up Under Your Portal</h2></div>
     </div>
 
     <section class="main-content">
@@ -34,7 +34,7 @@
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-header card-default">
-                        Clients Who Have Signed Up For Paid Business Credit Builder Program
+                        Clients Who Have Signed Up Under Your Portal
                     </div>
                     <div class="card-body">
                         <table id="datatable" class="table table-striped dt-responsive nowrap">
