--- a/whitelabelpartnerportal/templates/partner-commissions.html
+++ b/whitelabelpartnerportal/templates/partner-commissions.html
@@ -40,6 +40,7 @@
                   <th>Price Of Product</th>
                   <th>Commission On Product</th>
                   <th>Your Payment</th>
+                  <th>Payout Date</th>
               </tr>
               </thead>
               <tbody>
@@ -48,42 +49,49 @@
                     <td>Annual One Time Payment Of $999</td>
                     <td>40%</td>
                     <td>$400</td>
+                    <td>7 Days From Purchase</td>
                   </tr>
                   <tr>
                     <td>Business Builder Monthly Package</td>
                     <td>Monthly Payments Of $109.99</td>
                     <td>40%</td>
                     <td>$44 per month</td>
+                    <td>7 Days From Purchase</td>
                   </tr>
                   <tr>
                     <td>Toll Free Number</td>
                     <td>$49 A Month Or $599 For The Year</td>
                     <td>25%</td>
                     <td>$12.25 per month or $150 per year</td>
+                    <td>7 Days From Purchase</td>
                   </tr>
                   <tr>
                     <td>Fax Number</td>
                     <td>$19.99 Per Month Or $240.99 For The Year</td>
                     <td>25%</td>
                     <td>$5 per month or $60 per year</td>
+                    <td>7 Days From Purchase</td>
                   </tr>
                   <tr>
                     <td>Professional Email Address</td>
                     <td>$29.99 For The Year</td>
                     <td>5%</td>
                     <td>$1.50 Per Year</td>
+                    <td>7 Days From Purchase</td>
                   </tr>
                   <tr>
                     <td>Domain Name</td>
                     <td>$13.99 For The Year</td>
                     <td>5%</td>
                     <td>$0.70 per year</td>
+                    <td>7 Days From Purchase</td>
                   </tr>
                   <tr>
                     <td>Merchant Account</td>
                     <td>Free - $10 per month per product</td>
                     <td>Variable Bonus</td>
                     <td>$100-$200</td>
+                    <td>7 Days From Purchase</td>
                   </tr>
               </tbody>
         </table>
