--- a/getdinerotoday/templates/landingpages/components/Header.html
+++ b/getdinerotoday/templates/landingpages/components/Header.html
@@ -74,9 +74,9 @@
                     <!-- Navbar -->
                     <nav class="navbar navbar-expand-lg">
                         <a class="navbar-brand logo" href="/">
-                            <img id="logo-white-img" class="img-center" src="{{ wl_logo }}"
+                            <img id="logo-white-img" class="img-center" src="{{ dynamic.logo.url }}"
                                  height="180px" alt="">
-                            <img id="logo-img" class="img-center sticky-logo" src="{{ wl_logo }}"
+                            <img id="logo-img" class="img-center sticky-logo" src="{{ dynamic.logo.url }}"
                                  height="180px" alt="">
                         </a>
                         <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse"
