--- a/getdinerotoday/templates/landingpages/index.html
+++ b/getdinerotoday/templates/landingpages/index.html
@@ -153,8 +153,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-md-12 ml-auto mr-auto">
-                    <h3 class="text-black font-weight-normal line-h-2">Get Dinero Today Is <span class="text-theme">Built </span>For
+                    {% if dynamic.title %}
+                    <h3 class="text-black font-weight-normal line-h-2">{{dynamic.title}} Is <span class="text-theme">Built </span>For
                         Businesses Like Yours. See All The Features We Do For You Below.</h3>
+                    {% endif %}
                 </div>
             </div>
             <div class="row mt-5">
