--- a/user/templates/registration.html
+++ b/user/templates/registration.html
@@ -55,7 +55,9 @@
             </div>
         </div>
 
-        <div class="text-center"> By Clicking 'Register Now' You Agree with <a href="{% url 'user:terms' %}" target="_blank">Terms and Conditions</a> </div>
+        <div class="text-center"> By Clicking 'Register Now' You Agree with <a href="{% url 'user:terms' %}"
+                                                                               target="_blank">Terms and Conditions</a>
+        </div>
 
         <input type="submit" name="commit" value="Register Now"
                class="newButton btn btn-block btn-primary btn-rounded box-shadow mt-10"
