--- a/user/templates/forgotpassword.html
+++ b/user/templates/forgotpassword.html
@@ -1,22 +1,24 @@
 {% extends "userBase.html" %}
 {% load i18n %}
 {% block content %}
-            <form class="new_user" id="new_user" method="post" accept-charset="UTF-8">{% csrf_token %}
-                {{ form.as_p }}
+    <form class="new_user" id="new_user" method="post" accept-charset="UTF-8">{% csrf_token %}
+        {{ form.as_p }}
 
-                <div class="clearfix">
+        <div class="clearfix">
 
-                    <input type="submit" style="height: 40px;" name="commit" value="Send me reset password instructions" class="btn btn-block btn-primary btn-rounded box-shadow" data-disable-with="Send me reset password instructions" />
-                </div>
-                <br>
-                <p class=" text-center">Do Not Have An Account?</p>
-                <a class="btn btn-block btn-success btn-rounded box-shadow" href="{% url 'user:login' %}">Login</a>
-</form>
-<style>
-  .clearfix{
-    height: 40px;
-  }
-</style>
+            <input type="submit" style="height: 40px;" name="commit" value="Send me reset password instructions"
+                   class="btn btn-block btn-primary btn-rounded box-shadow"
+                   data-disable-with="Send me reset password instructions"/>
+        </div>
+        <br>
+        <p class=" text-center">Do Not Have An Account?</p>
+        <a class="btn btn-block btn-success btn-rounded box-shadow" href="{% url 'user:login' %}">Login</a>
+    </form>
+    <style>
+        .clearfix {
+            height: 40px;
+        }
+    </style>
 
 {% endblock %}
         
