--- a/user/templates/password-reset-email-sent.html
+++ b/user/templates/password-reset-email-sent.html
@@ -1,15 +1,17 @@
 {% extends "userBase.html" %}
 {% load i18n %}
 {% block content %}
-<p>We’ve emailed you instructions for setting your password, if an account exists with the email you entered. You should receive them shortly.</p>
+    <p>We’ve emailed you instructions for setting your password, if an account exists with the email you entered. You
+        should receive them shortly.</p>
 
-<p>If you don’t receive an email, please make sure you’ve entered the address you registered with, and check your spam folder.</p>
+    <p>If you don’t receive an email, please make sure you’ve entered the address you registered with, and check your
+        spam folder.</p>
 
-</form>
-<style>
-  .clearfix{
-    height: 40px;
-  }
-</style>
+    </form>
+    <style>
+        .clearfix {
+            height: 40px;
+        }
+    </style>
 
 {% endblock %}
