--- a/user/templates/userBase.html
+++ b/user/templates/userBase.html
@@ -15,22 +15,23 @@
             width: 300px;
         }
 
+
+        .bgcolor {
         {% if dynamic.bg_color %}
-            .bgcolor {
-                background-color: {{ dynamic.bg_color }};
-                background: {{ dynamic.bg_color }};
-                background-repeat: no-repeat;
-                font-family: "Montserrat", sans-serif;
-                color: #575962;
-                font-size: 14px;
-                font-weight: 400;
-                min-height: 100vh;
-                line-height: 24px;
-                overflow-x: hidden;
-                margin: 0;
-                text-align: left;
-            }
+            background: {{ dynamic.bg_color }};
         {% endif %}
+            background-repeat: no-repeat;
+            font-family: "Montserrat", sans-serif;
+            color: #575962;
+            font-size: 14px;
+            font-weight: 400;
+            min-height: 100vh;
+            line-height: 24px;
+            overflow-x: hidden;
+            margin: 0;
+            text-align: left;
+        }
+
 
         .misc-box {
             background-color: #fff;
@@ -226,7 +227,9 @@
     <div class="row justify-content-center">
         <div class="col-md-4 col-xs-12 widthClass">
             <div class="misc-header text-center">
-                <img class="toggle-none hidden-xs image" src="{{ dynamic.logo.url }}"/>
+                {% if dynamic.logo and dynamic.logo.url %}
+                    <img class="toggle-none hidden-xs image" src="{{ dynamic.logo.url }}"/>
+                {% endif %}
             </div>
             <div class="misc-box">
                 {% block content %}
