--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -46,7 +46,7 @@
                         {#                        with No Money Down</a>#}
                         {#                </li>#}
                         <li class="nav-item">
-                            <a href="{% url 'business:nocredit-financings' %}" 
+                            <a href="{% url 'business:tradelines' %}"
                                class="nav-link"> Add Business Tradelines </a>
                         </li>
                         <li class="nav-item">
